# gatherer

./: .gitignore  CMakeLists.txt  README.org
.github/workflows/: cmake-linux.yml  cmake-windows.yml
src/: assets.cpp  async.cpp  events.cpp  gatherer.hpp  main.cpp
